--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
 name = "sticky-note"
 version = "0.1.0"
-edition = "2024"
+edition = "2025"
 
 [dependencies]
+dirs = "6.0.0"
+eframe = "0.32.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
